more precise security schemes
